# team-ws

./: .gitignore  evaluation_stats.md  move_keys.sh  pyproject.toml  sctest.py
.old_wall_follower_example/: package.xml  setup.py
.ssh/: id_ed25519  id_ed25519.pub
evaluation_rosbag_data_long_path/: evaluation_summary.md
evaluations/: evaluation_stats.csv
install/: local_setup.sh  setup.sh
launch/: my_first_launch.launch.xml  static_tf_publisher.launch.xml
left_close_fast_ansis_3/: left_close_fast_ansis_3_0.db3  metadata.yaml
left_close_slow_ansis_2/: metadata.yaml
log/: latest_build
mytest/: metadata.yaml
right_short_close_ansis_2/: metadata.yaml
right_short_close_ansis_6/: metadata.yaml
right_slow_short_2/: metadata.yaml
right_slow_short_muktha_3/: metadata.yaml
right_slow_short_tissany_1/: metadata.yaml
rosbag_data/: README.md
scripts/: README.md  evaluate_and_plot_rosbag_data2_jeryl.py  evaluate_rosbag_distances.py  plot_by_robot_method.py  plot_median_runs.py
straight_inard_jeryl_right_2/: metadata.yaml
straight_inward_ansis_left_3/: metadata.yaml
straight_inward_ansis_right_1/: metadata.yaml
straight_inward_ansis_right_2/: metadata.yaml  straight_inward_ansis_right_2_0.db3
straight_inward_ansis_right_3/: metadata.yaml
straight_inward_jeryl_right_3/: metadata.yaml
straight_inward_muktha_left_1/: straight_inward_muktha_left_1_0.db3
straight_inward_muktha_left_2/: metadata.yaml  straight_inward_muktha_left_2_0.db3
straight_inward_muktha_right_1/: metadata.yaml
straight_inward_tissany_left_2/: metadata.yaml
(+374 files in other folders)
