[project]
name = "team-ws-scripts"
version = "0.1.0"
description = "Scripts for team-ws (e.g. rosbag distance evaluation)"
readme = "scripts/README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
    "numpy>=1.20",
    "scipy>=1.7",
    "rosbags>=0.9.0",
]

[tool.uv]
dev-dependencies = []
